--- a/content/templates/content/base.html
+++ b/content/templates/content/base.html
@@ -33,6 +33,28 @@
     <style>
         .cascading-right { margin-left: -200px; margin-top: -50px } @media (max-width: 991.98px) { .cascading-right { margin-left: 0; } }
     </style>
+    <!-- Yandex.Metrika counter -->
+    <script type="text/javascript">
+        (function(m,e,t,r,i,k,a){m[i]=m[i]||function(){(m[i].a=m[i].a||[]).push(arguments)};
+        m[i].l=1*new Date();
+        for (var j = 0; j < document.scripts.length; j++) {if (document.scripts[j].src === r) { return; }}
+        k=e.createElement(t),a=e.getElementsByTagName(t)[0],k.async=1,k.src=r,a.parentNode.insertBefore(k,a)})
+        (window, document, "script", "https://mc.yandex.ru/metrika/tag.js", "ym");
+
+        ym(98158804, "init", {
+             clickmap:true,
+             trackLinks:true,
+             accurateTrackBounce:true
+        });
+    </script>
+    <noscript>
+        <div><img src="https://mc.yandex.ru/watch/98158804" style="position:absolute; left:-9999px;" alt=""/></div>
+    </noscript>
+    <!-- /Yandex.Metrika counter -->
+    <!--    Webmaster-->
+    <meta name="yandex-verification" content="3423ddbf7e176ea5"/>
+    <!--    Google Search-->
+    <meta name="google-site-verification" content="ugCNr1QbJhnb3cgi1Jle-3F3LsRaP7kY-MvB9uO32Qk"/>
 </head>
 
 
@@ -61,10 +83,12 @@
                 <ul class="navbar-nav">
                     <!-- Link -->
                     <li class="nav-item btn-animate" data-mdb-ripple-color="red">
-                        <a data-aos="fade-right" data-aos-delay="600" class="nav-link " href="/">{% translate 'Главная'%}</a>
+                        <a data-aos="fade-right" data-aos-delay="600" class="nav-link " href="/">{% translate
+                            'Главная'%}</a>
                     </li>
                     <li class="nav-item btn-animate">
-                        <a data-aos="fade-right" data-aos-delay="400" class="nav-link " href="/#about_us">{% translate 'О Компании' %}</a>
+                        <a data-aos="fade-right" data-aos-delay="400" class="nav-link " href="/#about_us">{% translate
+                            'О Компании' %}</a>
                     </li>
                     <!-- Dropdown -->
                     <li class="nav-item dropdown mx-auto">
@@ -77,24 +101,29 @@
                         <!-- Dropdown menu -->
                         <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                             <li>
-                                <a class="dropdown-item ripple" data-mdb-ripple-color="success" href="badges&Pads">{% translate 'Клины / Колодки' %}</a>
+                                <a class="dropdown-item ripple" data-mdb-ripple-color="success" href="badges&Pads">{%
+                                    translate 'Клины / Колодки' %}</a>
                             </li>
                             <li>
                                 <hr class="dropdown-divider border border-primary"/>
                             <li>
-                                <a class="dropdown-item ripple" data-mdb-ripple-color="primary" href="piping">{% translate 'Задвижки чугунные' %}</a>
+                                <a class="dropdown-item ripple" data-mdb-ripple-color="primary" href="piping">{%
+                                    translate 'Задвижки чугунные' %}</a>
                             </li>
                             <li>
-                                <a class="dropdown-item ripple" data-mdb-ripple-color="primary" href="piping">{% translate 'Затворы' %}</a>
+                                <a class="dropdown-item ripple" data-mdb-ripple-color="primary" href="piping">{%
+                                    translate 'Затворы' %}</a>
                             </li>
                             <li>
-                                <a class="dropdown-item ripple" data-mdb-ripple-color="primary" href="piping">{% translate 'Вантузы' %}</a>
+                                <a class="dropdown-item ripple" data-mdb-ripple-color="primary" href="piping">{%
+                                    translate 'Вантузы' %}</a>
                             </li>
                             <li>
                                 <hr class="dropdown-divider border border-danger"/>
                             </li>
                             <li>
-                                <a class="dropdown-item ripple" data-mdb-ripple-color="danger" href="iron_casting">{% translate 'Чугунное Литье' %}</a>
+                                <a class="dropdown-item ripple" data-mdb-ripple-color="danger" href="iron_casting">{%
+                                    translate 'Чугунное Литье' %}</a>
                             </li>
                         </ul>
                     </li>
